--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.0",
-  "name": "CHANGE_ME",
+  "name": "compreJunto",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -31,8 +31,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.15",
+    "@vtex/danger": "^0.2.7",
     "@vtex/intl-equalizer": "^2.5.0",
     "@vtex/prettier-config": "^0.3.5",
+    "@vtex/tsconfig": "^0.6.0",
+    "@vtex/styleguide": "^9.146.1",
     "eslint": "^7.14.0",
     "eslint-config-vtex": "^12.8.11",
     "eslint-config-vtex-react": "^6.8.3",
@@ -40,6 +44,6 @@
     "lint-staged": "^10.5.1",
     "prettier": "^2.2.0",
     "typescript": "^3.9.6",
-    "@vtex/danger": "^0.2.7"
+    "react-intersection-observer": "^8.30.3"
   }
 }
