--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "@vtex/danger": "^0.2.7",
     "@vtex/intl-equalizer": "^2.5.0",
     "@vtex/prettier-config": "^0.3.5",
-    "@vtex/tsconfig": "^0.6.0",
     "@vtex/styleguide": "^9.146.1",
+    "@vtex/tsconfig": "^0.6.0",
     "eslint": "^7.14.0",
     "eslint-config-vtex": "^12.8.11",
     "eslint-config-vtex-react": "^6.8.3",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.2.0",
-    "typescript": "^3.9.6",
-    "react-intersection-observer": "^8.30.3"
+    "react-apollo": "^3.1.5",
+    "react-intersection-observer": "^8.30.3",
+    "typescript": "^3.9.6"
   },
   "version": "0.0.0",
   "intl-equalizer": {
