--- a/manifest.json
+++ b/manifest.json
@@ -29,11 +29,10 @@
     "vtex.slider-layout": "0.x",
     "vtex.store-resources": "0.x",
     "vtex.search-graphql": "0.x",
-    "vtex.recommendation-context": "0.x"
+    "vtex.recommendation-context": "0.x",
+    "vtex.order-items": "0.x"
   },
-  "registries": [
-    "smartcheckout"
-  ],
+  "registries": ["smartcheckout"],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
